# slurpai

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: plan-screen-recording.md
src/ingestible/: cli.py  ffmpeg.py  log.py  process.py  transcribe.py
src/slurpai/: cli.py  ffmpeg.py  process.py  record.py  transcribe.py
src/slurpai/swift/: audio_setup.swift
tests/: conftest.py  test_cli.py  test_ffmpeg.py  test_process.py  test_record.py  test_transcribe.py
