[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ingestible"
version = "0.1.0"
description = "Convert voice notes, videos, and audio files into AI-ready text and images"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Graham Rowe" },
]
dependencies = [
    "click>=8.0",
    "python-dotenv>=1.0",
    "openai>=1.0",
]

[project.optional-dependencies]
local = ["faster-whisper>=0.10"]
dev = [
    "pytest>=7.0",
]

[project.scripts]
ingest = "ingestible.cli:ingest"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestible"]

[tool.pytest.ini_options]
testpaths = ["tests"]
