[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ingestible"
version = "0.1.0"
description = "Convert voice notes, videos, and audio files into AI-ready text and images"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Graham Rowe", email = "graham@phasetransitions.ai" },
]
keywords = [
    "whisper", "transcription", "voice-notes", "audio-to-text",
    "video-to-text", "ffmpeg", "openai", "ai", "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing",
]

[project.urls]
Repository = "https://github.com/grahamrowe82/ingestible"
Issues = "https://github.com/grahamrowe82/ingestible/issues"
dependencies = [
    "click>=8.0",
    "python-dotenv>=1.0",
    "openai>=1.0",
]

[project.optional-dependencies]
local = ["faster-whisper>=0.10"]
dev = [
    "pytest>=7.0",
]

[project.scripts]
ingest = "ingestible.cli:ingest"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestible"]

[tool.pytest.ini_options]
testpaths = ["tests"]
